--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "cssbeautify": "^0.3.1",
     "gatsby": "^2.1.23",
     "gatsby-image": "^2.0.31",
     "gatsby-plugin-manifest": "^2.0.22",
